@@ -5,6 +5,7 @@ NEWS
 
 - 1.4.27 -
   * Fix handling return value of SSL_CTX_set_options (fixes #2157, thx mlcreech)
+  * Fix mod_proxy HUP handling (send final chunk, fix usage counter)
 
 - 1.4.26 - 2010-02-07
   * Fix request parser to handle packets with splitted \r\n\r\n (fixes #2105)
